# Kmeans_clustering

./: CMakeLists.txt  README.md
Kmeans/: CMakeLists.txt  readme.md  readme.txt
Kmeans/data/: 000.xyz  002.xyz  003.xyz  004.xyz  005.xyz  006.xyz  007.xyz  008.xyz  009.xyz  010.xyz  011.xyz  012.xyz  013.xyz  014.xyz  015.xyz  016.xyz  017.xyz  018.xyz  019.xyz  020.xyz  021.xyz  022.xyz  023.xyz  024.xyz  025.xyz  026.xyz  027.xyz  028.xyz  029.xyz  030.xyz  031.xyz  032.xyz  033.xyz  034.xyz  035.xyz  036.xyz  037.xyz  038.xyz  039.xyz  040.xyz  (+464 more)
Kmeans/src/: Dataset.cpp  Dataset.h  Kmeans.cpp  Kmeans.h  Preprocessing.cpp  Preprocessing.h  ReadDataset.cpp  ReadDataset.h  WriteDataset.cpp  WriteDataset.h  main.cpp
Kmeans/testdata/: 001.xyz  result.laz
